set(mxengine_headers
    "Core/Application/Application.h" 
    "Core/Application/Event.h" 
    "Core/Application/Config.h" 
    "Core/Application/GlobalConfig.h" 
    "Core/Application/Physics.h" 
    "Core/Application/Rendering.h" 
    "Core/Application/Runtime.h" 
    "Core/Application/Timer.h" 
    "Core/BoundingObjects/AABB.h" 
    "Core/BoundingObjects/BoundingBox.h" 
    "Core/BoundingObjects/BoundingSphere.h" 
    "Core/BoundingObjects/Capsule.h" 
    "Core/BoundingObjects/Cone.h" 
    "Core/BoundingObjects/Cylinder.h" 
    "Core/BoundingObjects/Frustrum.h" 
    "Core/BoundingObjects/Line.h" 
    "Core/Components/Audio/AudioListener.h" 
    "Core/Components/Audio/AudioSource.h" 
    "Core/Components/Camera/CameraBase.h" 
    "Core/Components/Camera/CameraController.h" 
    "Core/Components/Camera/FrustrumCamera.h" 
    "Core/Components/Camera/InputControl.h" 
    "Core/Components/Camera/OrthographicCamera.h" 
    "Core/Components/Camera/PerspectiveCamera.h" 
    "Core/Components/Camera/VRCameraController.h" 
    "Core/Components/Components.h" 
    "Core/Components/Instancing/Instance.h" 
    "Core/Components/Instancing/InstanceFactory.h" 
    "Core/Components/Lighting/LightBase.h" 
    "Core/Components/Physics/BoxCollider.h" 
    "Core/Components/Physics/CapsuleCollider.h" 
    "Core/Components/Physics/ColliderBase.h" 
    "Core/Components/Physics/CylinderCollider.h" 
    "Core/Components/Physics/RigidBody.h" 
    "Core/Components/Physics/SphereCollider.h" 
    "Core/Components/Rendering/DebugDraw.h" 
    "Core/Components/Rendering/MeshLOD.h" 
    "Core/Components/Rendering/MeshRenderer.h" 
    "Core/Components/Rendering/MeshSource.h" 
    "Core/Components/Rendering/Skybox.h" 
    "Core/Components/Lighting/DirectionalLight.h" 
    "Core/Components/Lighting/PointLight.h" 
    "Core/Components/Lighting/SpotLight.h" 
    "Core/Components/Script.h" 
    "Core/Components/Transform.h" 
    "Core/Components/Behaviour.h" 
    "Core/Rendering/DebugBuffer.h" 
    "Core/Rendering/Rectangle.h" 
    "Core/Rendering/RenderAdaptor.h" 
    "Core/Rendering/RenderPipeline.h" 
    "Core/Rendering/SkyboxObject.h" 
    "Core/Rendering/RenderController.h" 
    "Core/Runtime/RuntimeEditor.h" 
    "Core/Events/AppDestroyEvent.h" 
    "Core/Events/Events.h" 
    "Core/Events/RenderEvent.h" 
    "Core/Events/FpsUpdateEvent.h" 
    "Core/Events/UpdateEvent.h" 
    "Core/Events/KeyEvent.h" 
    "Core/Events/MouseEvent.h" 
    "Core/Events/WindowResizeEvent.h" 
    "Core/Events/EventBase.h" 
    "Core/Macro/Macro.h" 
    "Core/Resources/Mesh.h" 
    "Core/Resources/MeshData.h" 
    "Core/Resources/AssetManager.h" 
    "Core/Resources/SubMesh.h" 
    "Core/Resources/Material.h" 
    "Core/MxObject/MxObject.h" 
    "Platform/AudioAPI.h" 
    "Platform/GraphicAPI.h" 
    "Platform/PhysicsAPI.h" 
    "Platform/Modules/GraphicModule.h" 
    "Platform/Modules/AudioModule.h" 
    "Platform/Modules/PhysicsModule.h" 
    "Platform/OpenAL/ALUtilities.h" 
    "Platform/OpenAL/AudioBuffer.h" 
    "Platform/OpenAL/AudioPlayer.h" 
    "Platform/Bullet3/BoxShape.h" 
    "Platform/Bullet3/CapsuleShape.h" 
    "Platform/Bullet3/CylinderShape.h" 
    "Platform/Bullet3/NativeRigidBody.h" 
    "Platform/Bullet3/ShapeBase.h" 
    "Platform/Bullet3/SphereShape.h" 
    "Platform/Bullet3/Bullet3Utils.h"
    "Platform/OpenGL/CubeMap.h" 
    "Platform/OpenGL/FrameBuffer.h" 
    "Platform/OpenGL/RenderBuffer.h" 
    "Platform/OpenGL/GLUtilities.h" 
    "Platform/OpenGL/IndexBuffer.h" 
    "Platform/OpenGL/Shader.h" 
    "Platform/OpenGL/Texture.h" 
    "Platform/OpenGL/VertexArray.h" 
    "Platform/OpenGL/VertexBufferLayout.h" 
    "Platform/OpenGL/VertexBuffer.h" 
    "Platform/OpenGL/Renderer.h" 
    "Platform/Window/Window.h" 
    "Platform/Window/Input.h" 
    "Platform/Window/WindowManager.h" 
    "Library/Scripting/Python/PythonEngine.h"  
    "Library/Primitives/Primitives.h" 
    "Library/Primitives/Colors.h" 
    "Utilities/Audio/SupportedAudioTypes.h" 
    "Utilities/Audio/AudioLoader.h" 
    "Utilities/AbstractFactory/AbstractFactory.h" 
    "Utilities/ECS/Component.h" 
    "Utilities/ECS/ComponentFactory.h" 
    "Utilities/ECS/ComponentView.h" 
    "Utilities/FileSystem/FileManager.h" 
    "Utilities/FileSystem/File.h" 
    "Utilities/Image/Image.h" 
    "Utilities/Image/ImageManager.h" 
    "Utilities/Image/ImageConverter.h" 
    "Utilities/ImGui/Editors/ApplicationEditor.h" 
    "Utilities/ImGui/Editors/ComponentEditor.h" 
    "Utilities/ImGui/Editors/MxObjectEditor.h" 
    "Utilities/ImGui/Editors/RenderEditor.h" 
    "Utilities/ImGui/Editors/ResourceEditor.h" 
    "Utilities/ImGui/EventLogger.h" 
    "Utilities/ImGui/Viewport.h" 
    "Utilities/ImGui/GraphicConsole.h" 
    "Utilities/ImGui/ImGuiBase.h" 
    "Utilities/ImGui/ImGuiUtils.h" 
    "Utilities/ImGui/Layout.h" 
    "Utilities/ImGui/ProfilerGraph.h" 
    "Utilities/Json/Json.h" 
    "Utilities/LODGenerator/LODGenerator.h" 
    "Utilities/Logging/Logger.h" 
    "Utilities/Logging/LoggerData.h" 
    "Utilities/Logging/LogSettings.h" 
    "Utilities/Logging/Platform.h" 
    "Utilities/Memory/ChunkAllocator.h" 
    "Utilities/Memory/LinearAllocator.h" 
    "Utilities/Memory/Memory.h" 
    "Utilities/Memory/PoolAllocator.h" 
    "Utilities/Memory/RandomAllocator.h" 
    "Utilities/Memory/StackAllocator.h" 
    "Utilities/Array/Array2D.h" 
    "Utilities/Array/ArrayView.h" 
    "Utilities/EventDispatcher/EventDispatcher.h" 
    "Utilities/Format/Format.h" 
    "Utilities/Image/ImageLoader.h" 
    "Utilities/Math/Math.h" 
    "Utilities/ObjectLoader/ObjectLoader.h"  
    "Utilities/Profiler/Profiler.h" 
    "Utilities/Random/Random.h" 
    "Utilities/STL/MxFunction.h" 
    "Utilities/STL/MxHashMap.h" 
    "Utilities/STL/MxHashSet.h" 
    "Utilities/STL/MxMap.h" 
    "Utilities/STL/MxSet.h" 
    "Utilities/STL/MxString.h" 
    "Utilities/STL/MxVector.h" 
    "Utilities/UUID/UUID.h" 
    "Utilities/String/String.h" 
    "Utilities/Time/Time.h" 
    "Utilities/VectorPool/VectorPool.h" 
    "MxEngine.h"
)

set(mxengine_sources
    "Core/Application/Config.cpp" 
    "Core/Application/GlobalConfig.cpp" 
    "Core/Application/Physics.cpp" 
    "Core/Application/Render.cpp" 
    "Core/Application/Application.cpp" 
    "Core/Components/Physics/CapsuleCollider.cpp" 
    "Core/Components/Physics/CylinderCollider.cpp"
    "Core/Components/Audio/AudioListener.cpp" 
    "Core/Components/Audio/AudioSource.cpp" 
    "Core/Components/Camera/CameraBase.cpp" 
    "Core/Components/Camera/CameraController.cpp" 
    "Core/Components/Camera/FrustrumCamera.cpp" 
    "Core/Components/Camera/InputControl.cpp" 
    "Core/Components/Camera/OrthographicCamera.cpp" 
    "Core/Components/Camera/PerspectiveCamera.cpp" 
    "Core/Components/Camera/VRCameraController.cpp" 
    "Core/Components/Instancing/InstanceFactory.cpp" 
    "Core/Components/Physics/BoxCollider.cpp" 
    "Core/Components/Physics/ColliderBase.cpp" 
    "Core/Components/Physics/RigidBody.cpp" 
    "Core/Components/Physics/SphereCollider.cpp" 
    "Core/Components/Rendering/MeshLOD.cpp" 
    "Core/Components/Rendering/MeshRenderer.cpp" 
    "Core/Components/Lighting/DirectionalLight.cpp" 
    "Core/Components/Lighting/PointLight.cpp" 
    "Core/Components/Lighting/SpotLight.cpp"
    "Core/Components/Script.cpp" 
    "Core/Components/Transform.cpp" 
    "Core/Components/Behaviour.cpp" 
    "Core/Rendering/DebugBuffer.cpp" 
    "Core/Rendering/Rectangle.cpp" 
    "Core/Rendering/RenderAdaptor.cpp" 
    "Core/Rendering/RenderController.cpp" 
    "Core/Rendering/SkyboxObject.cpp"
    "Core/Runtime/RuntimeEditor.cpp"  
    "Core/MxObject/MxObject.cpp" 
    "Core/Resources/Mesh.cpp" 
    "Core/Resources/MeshData.cpp" 
    "Core/Resources/AssetManager.cpp" 
    "Core/Resources/SubMesh.cpp"  
    "Platform/Modules/AudioModule.cpp" 
    "Platform/Modules/PhysicsModule.cpp" 
    "Platform/Modules/GraphicModule.cpp"
    "Platform/Bullet3/CapsuleShape.cpp" 
    "Platform/Bullet3/CylinderShape.cpp" 
    "Platform/Bullet3/BoxShape.cpp" 
    "Platform/Bullet3/NativeRigidBody.cpp" 
    "Platform/Bullet3/ShapeBase.cpp" 
    "Platform/Bullet3/SphereShape.cpp" 
    "Platform/OpenAL/ALUtilities.cpp" 
    "Platform/OpenAL/AudioBuffer.cpp" 
    "Platform/OpenAL/AudioPlayer.cpp" 
    "Platform/OpenGL/CubeMap.cpp" 
    "Platform/OpenGL/FrameBuffer.cpp"  
    "Platform/OpenGL/GLUtilities.cpp" 
    "Platform/OpenGL/IndexBuffer.cpp" 
    "Platform/OpenGL/RenderBuffer.cpp" 
    "Platform/OpenGL/Shader.cpp" 
    "Platform/OpenGL/Texture.cpp" 
    "Platform/OpenGL/VertexArray.cpp" 
    "Platform/OpenGL/VertexBufferLayout.cpp" 
    "Platform/OpenGL/VertexBuffer.cpp" 
    "Platform/OpenGL/Renderer.cpp" 
    "Platform/Window/Input.cpp" 
    "Platform/Window/Window.cpp" 
    "Platform/Window/WindowManager.cpp" 
    "Utilities/ImGui/Editors/ApplicationEditor.cpp" 
    "Utilities/ImGui/Editors/ComponentEditors/RenderingEditors.cpp" 
    "Utilities/Audio/AudioLoader.cpp" 
    "Utilities/FileSystem/File.cpp" 
    "Utilities/FileSystem/FileManager.cpp" 
    "Utilities/Image/Image.cpp" 
    "Utilities/Image/ImageLoader.cpp" 
    "Utilities/Image/ImageConverter.cpp" 
    "Utilities/Image/ImageManager.cpp" 
    "Utilities/ImGui/Editors/ComponentEditors/AudioEditors.cpp" 
    "Utilities/ImGui/Editors/ComponentEditors/CameraEditors.cpp" 
    "Utilities/ImGui/Editors/ComponentEditors/ComponentEditor.cpp" 
    "Utilities/ImGui/EventLogger.cpp" 
    "Utilities/ImGui/GraphicConsole.cpp" 
    "Utilities/ImGui/Editors/ComponentEditors/InstancingEditors.cpp" 
    "Utilities/ImGui/Editors/LightEditors.cpp" 
    "Utilities/ImGui/Editors/MxObjectEditor.cpp" 
    "Utilities/ImGui/Editors/ComponentEditors/PhysicsEditors.cpp" 
    "Utilities/ImGui/ProfilerGraph.cpp" 
    "Utilities/ImGui/Editors/RenderEditor.cpp" 
    "Utilities/ImGui/Editors/ResourceEditor.cpp" 
    "Utilities/ImGui/Viewport.cpp" 
    "Utilities/Json/Json.cpp" 
    "Utilities/LODGenerator/LODGenerator.cpp" 
    "Utilities/Logging/Logger.cpp" 
    "Utilities/Logging/Platform.cpp" 
    "Utilities/Memory/Memory.cpp" 
    "Utilities/ObjectLoader/ObjectLoader.cpp" 
    "Utilities/Profiler/Profiler.cpp" 
    "Utilities/Random/Random.cpp" 
    "Utilities/STL/Vsnprintf.cpp" 
    "Utilities/UUID/UUID.cpp" 
    "Utilities/Time/Time.cpp"   
    "Library/Primitives/Primitives.cpp" 
    "Library/Scripting/Python/PythonEngine.cpp"   
)

set(project_root_path ${CMAKE_CURRENT_SOURCE_DIR}/..)
set(submodules_path ${project_root_path}/submodules)

set(nlohmann_json ${submodules_path}/json)
set(eastl ${submodules_path}/EASTL)
set(eabase ${submodules_path}/EABase)

set(third_party_include_directories
    ${nlohmann_json}/single_include
    ${eastl}/include
    ${eabase}/include/Common
)

set(third_party_build_dir ${CMAKE_CURRENT_BINARY_DIR})

add_subdirectory(${eastl} ${third_party_build_dir}/eastl)
add_subdirectory(${eabase} ${third_party_build_dir}/eabase)

set(mxengine_include_directories ${CMAKE_CURRENT_SOURCE_DIR} ${third_party_include_directories})
include_directories(${mxengine_include_directories})

add_library(MxEngine ${mxengine_sources})
add_library(MxEngine::MxEngine ALIAS MxEngine)